--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   Products
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a  style="color: #333;"class="dropdown-item" href="#">All the best products</a></li>
+                  <li><a  style="color: #333;"class="dropdown-item" href="/products.html">All the best products</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a style="color: #333;" class="dropdown-item" href="#">Best Laptops</a></li>
                   <li><a style="color: #333;" class="dropdown-item" href="#">Best Graphics Cards</a></li>
@@ -42,6 +42,16 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link Follow" href="#" >Follow</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="lang" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Language
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a  style="color: #333;"class="lang1" href="#">English</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a style="color: #333;" class="lang2" href="#">Russian</a></li>
+                </ul>
               </li>
             </ul>
             <form class="d-flex">
@@ -201,7 +211,7 @@
 
     <div class="container">
       <div class="box">
-        <a style="color:white;" href="#">About Us</a>
+        <a style="color:white;" href="/aboutus.html">About Us</a>
         <a style="color:white;" href="#">Help</a>
         <a style="color:white;" href="#">Privacy Policy</a>
       </div>
